Update nav bar name

--- a/layouts/global/nav.jade
+++ b/layouts/global/nav.jade
@@ -4,8 +4,8 @@ nav(ng-class='hide-on-small-only')
     li.logo
       a#logo-container.brand-logo.teal-text(aria-label='Navigate to the beginning of the page', href='#intro')
         h1
-          | Andrew Borstein
-          span.brown-text.light Full Stack Developer
+          | Guy Burroughes
+          span.brown-text.light Robotics Engineer
     li.bold
       a.waves-effect.waves-dark.teal-text(aria-label='Navigate to the About section', href='#about')
         i.mdi-social-person.small
